Replace Collections.emptyList by List.of